tests/file_test/testdata/unknown_char_escape.llang
# \z is not a valid escape char

let s = "abc\zdef";
